# computer_practices

./: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  NFA.cpp  NFA.h  NFA_console_app.cpp  NFA_console_app.h  NFA_stack.cpp  NFA_stack.h  NFA_variables.cpp  NFA_variables.h  README.md  basic_functions.h  big_integer.cpp  big_integer.h  graph.cpp  graph.h  init.bat  linear_term.cpp  linear_term.h  main.cpp  test.cpp  test.h
NFA/: NFA.gv  NFA1.gv  NFA2.gv  NFA3.gv  NFA4.gv  command.txt
NFA/NFAs/: div2.txt  div3.txt  div_2.txt  equal.txt  even.txt  hr_lang.txt  hr_lang_plus.txt  leg.txt  odd.txt  sum.txt  zero.txt
